# SeekSoulMethyl

./: README.md
seeksoultools-1.3.0/: MANIFEST.in  conda_dependencies.yml  conda_dependencies.zh.yml  pip_install.sh  setup.cfg  setup.py
seeksoultools-1.3.0/.github/workflows/: ci.yml
seeksoultools-1.3.0/src/search-pattern/: Cargo.toml  pyproject.toml
seeksoultools-1.3.0/src/search-pattern/src/: main.rs
seeksoultools-1.3.0/src/seeksoultools/: __init__.py
seeksoultools-1.3.0/src/seeksoultools/fast/: __init__.py  report.py  step2.py  step3.py  step4.py
seeksoultools-1.3.0/src/seeksoultools/fast/template/: base.html  biotype_pie.html  cells_part.html  cluster_part.html  genebody.html  mapping_part.html  marker_part.html  median_part.html  sample_part.html  saturation_part.html  sequencing_part.html  umi_part.html
seeksoultools-1.3.0/src/seeksoultools/multivdj/: __init__.py
seeksoultools-1.3.0/src/seeksoultools/rna/: __init__.py  report.py  step2.py  step3.py  step4.py
seeksoultools-1.3.0/src/seeksoultools/utils/: __init__.py  addtag.py  barcode.py  cell_identify.R  chemistry.py  countUtil.py  do_seurat.R  fastUtil.py  gtf2bed.pl  gtfvalidator.py  helper.py  multi_report.py  pipeline.py  plotUtil.py  reassign.py  splitref.py  vdjUtil.py  wrappers.py
seeksoultools-1.3.0/src/seeksoultools/utils/report/: base.html  marker.json  marker.tsv  marker2json.py  rna_description.json  vdj_description.json  websummary.py  websummaryFAST.py  websummaryRNA.py  websummaryVDJ.py
seeksoultools-1.3.0/src/seeksoultools/utils/trust4_ref/Homo_sapien/: IG_L-PART1+L-PART2.fa  IMGT+C.fa  TR_L-PART1+L-PART2.fa  bcr_tcr_gene_name.txt  bcrtcr.fa  build.sh
seeksoultools-1.3.0/src/seeksoultools/utils/trust4_ref/Mus_musculus/: IG_L-PART1+L-PART2.fa  (+5 more)
seeksoultools-1.3.0/src/seeksoultools/vdj/: __init__.py  enrichment.py  find_clones.py  report.py  run.py  summary.py  utils.py
seeksoultools-1.3.0/src/simpleqc/: .gitignore  Cargo.toml  pyproject.toml
seeksoultools-1.3.0/src/simpleqc/.github/workflows/: CI.yml
seeksoultools-1.3.0/src/simpleqc/src/: main.rs
(+12 files in other folders)
