[metadata]
name = seeksoultools
version = 1.3.0
author = seekgenebio
author_email = tools@seekgene.com
url = https://github.com/seekgenebio/seeksoultools
description = A professional bioinformatics toolkit for comprehensive single-cell transcriptome analysis, supporting RNA-seq, V(D)J sequencing, and full-length transcriptome workflows with high accuracy and efficiency.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = Linux
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    Programming Language :: Python :: 3.10
    Natural Language :: English
[options]
packages = find:
package_dir = 
  = src

include_package_data=True

[options.packages.find]
where = src


[options.entry_points]
console_scripts =
    seeksoultools = seeksoultools:cli
