[package]
name = "search-pattern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio="2.0.3"
seq_io="0.3.2"
niffler = "2.6.0"
anyhow = "1.0"
clap = { version = "4.4.6", features = ["derive"] }
csv = "1.3.0"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
simple_logger = "5.0.0"
time = "0.3"
