[package]
name = "simpleqc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seq_io = "0.3.2"
niffler = "2.6.0"
pariter = "0.5.1"
ndarray = "0.16.0"
csv = "1.3"
flate2 = { version = "1.0.17", features = ["zlib-ng"], default-features = false }
bytes = "1.7"
read-structure="0.2.0"
anyhow = "1.0"
clap = { version = "4.4.6", features = ["derive"] }
log = "0.4"
simplelog = "^0.12.0"
atoi = "2.0.0"
